# hms

./: Procfile  app.py  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt  routes.py
hms/: admin.py  apps.py  models.py  urls.py  views.py
hospital_management/: settings.py  urls.py  wsgi.py
static/css/: style.css
static/js/: main.js
templates/: accountant_dashboard.html  admin_dashboard.html  base.html  doctor_dashboard.html  lab_dashboard.html  login.html  nurse_dashboard.html  patient_dashboard.html  pharmacist_dashboard.html
templates/hms/: accountant_dashboard.html  admin_dashboard.html  base.html  doctor_dashboard.html  lab_dashboard.html  login.html  nurse_dashboard.html  patient_dashboard.html  pharmacist_dashboard.html
